--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -214,6 +214,57 @@ width
   text-transform: uppercase;
 }
 
+/*Carrito*/
+.cartContainer {
+  font-family: 'Lora', serif;
+  text-align: center;
+  background-color: white;
+  text-transform: uppercase;
+}
+ /*Ordenes*/
+
+
+
+/*Display de los productos*/
+/*ITEMS!!!*/
+.img-item {
+    width: 100px;
+    height: 130px;
+    margin-top: 10px;
+    vertical-align: top;
+    position: relative;
+    left: 50px;
+}
+
+.prodItems  {
+    width: 90%;
+}
+ .prodItem {
+    vertical-align: top;
+    width: 190px;
+    height: 240px;
+    margin: 12px;
+    background:#FEFEFE;
+    display: inline-block;
+    border-radius: 3px;
+    box-shadow:0 0 8px rgba(0, 0, 0, 0.06);
+ }
+
+.descProduct {
+    text-align: center;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 1.3em;
+}
+
+.priceProduct {
+    position: relative;
+    bottom: 10px;
+    text-align: center;
+    margin-top: 20px;
+}
+
 /*Collapsing NavBar earlier*/
 @media (min-width: 768px) and (max-width: 1200px) {
     .navbar-collapse.collapse {
